feat: implement python dataset builder for ml section, added API *first version, local only*, and related infrastructure

--- a/src/MoodTunes.Api/MoodTunes.Api.csproj
+++ b/src/MoodTunes.Api/MoodTunes.Api.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MoodTunes.Infrastructure\MoodTunes.Infrastructure.csproj" />
+    <ProjectReference Include="..\MoodTunes.Application\MoodTunes.Application.csproj" />
+  </ItemGroup>
+
 </Project>
