--- a/src/MoodTunes.Infrastructure/MoodTunes.Infrastructure.csproj
+++ b/src/MoodTunes.Infrastructure/MoodTunes.Infrastructure.csproj
@@ -1,5 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MoodTunes.Application\MoodTunes.Application.csproj" />
+    <ProjectReference Include="..\MoodTunes.Domain\MoodTunes.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
