--- a/src/MoodTunes.Application/MoodTunes.Application.csproj
+++ b/src/MoodTunes.Application/MoodTunes.Application.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\MoodTunes.Domain\MoodTunes.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
